@@ -5,4 +5,4 @@ This module use for news / blog system.
 * **Module version** 1.0.0-beta.3
 * **Pi supported version** [release-2.2.2](https://github.com/pi-engine/pi/releases)
 
-[Changelog](https://github.com/pi-module/news/blob/master/doc/changelog.txt)
+[Changelog](https://github.com/pi-module/news/blob/master/doc/changelog.txt) And [Todo](https://github.com/pi-module/news/blob/master/doc/todo.txt)
